--- a/client/src/components/themes/themeComponents/background/background.module.css
+++ b/client/src/components/themes/themeComponents/background/background.module.css
@@ -3,7 +3,7 @@
 }
 
 body:has(.background) {
-  background: var(--background);
+  background: var(--background, black);
   opacity: var(--background-opacity, 1);
   background-blend-mode: var(--background-blend-mode, normal);
 }
